@@ -439,22 +439,17 @@ class WeatherMapNode extends WeatherMapItem
 
 					$icon_im = imagecreatefromfile($this->iconfile);
 					# $icon_im = imagecreatefrompng($this->iconfile);
-					if(function_exists("imagefilter"))
-					{
-						// warn("Colorising?\n");
-						if (isset($colicon))
-						{
-						//	warn("YES\n");
-							imagefilter($icon_im, IMG_FILTER_COLORIZE, $colicon->r, $colicon->g, $colicon->b);
-						}
-						else
-						{
-						//	warn("NO\n");
-						}
+					if(function_exists("imagefilter") && isset($colicon) && $this->get_hint("use_imagefilter")==1)
+					{						
+						imagefilter($icon_im, IMG_FILTER_COLORIZE, $colicon->r, $colicon->g, $colicon->b);						
 					}
 					else
 					{
-						debug("Skipping unavailable imagefilter() call.\n");
+                                            if(isset($colicon))
+                                            {
+                                                // debug("Skipping unavailable imagefilter() call.\n");
+                                                imagecolorize($icon_im, $colicon->r, $colicon->g, $colicon->b);
+                                            }
 					}
 
 					debug("If this is the last thing in your logs, you probably have a buggy GD library. Get > 2.0.33 or use PHP builtin.\n");
